@@ -67,6 +67,7 @@ void FileHost::downloadTest()
     QNetworkReply *file;
 
     QTimer::singleShot(DOWNLOADTESTSECS * 1000, &loop, SLOT(quit()));
+    emit message(trUtf8("%1").arg(url.toString()));
     file = manager.get(QNetworkRequest(url));
     connect(file, SIGNAL(downloadProgress(qint64,qint64)), this, SLOT(updateBytes(qint64)));
     loop.exec();
