@@ -25,9 +25,10 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 const QString PROGRAMCOMPANY = "Binary Notion";
 const QString PROGRAMAUTHOR = "parsifal";
 const QString PROGRAMNAME = "QSpeedTest";
-const QString PROGRAMVERSION = "r10";
-const QString PROGRAMURL = "http://qspeedtest.sourceforge.net";
+const QString PROGRAMVERSION = "r11";
+const QString PROGRAMURL = "https://sourceforge.net/projects/qspeedtest/files/";
 const QString PROGRAMDISCUSSURL = "https://sourceforge.net/apps/phpbb/qspeedtest";
+const QString PROGRAMUPDATECHECKURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.version";
 const QString TARGETLISTURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.ini";
 const QString TARGETLISTVERSIONURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.ini.version";
 const int PINGTIMEOUT = 2000;
